--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - run: sudo docker rm content-api
       - run: sudo docker image rm content-api:latest
       - uses: actions/checkout@v2
-      - run: cd content-web && sudo docker build -t content-api:latest .
+      - run: cd content-api && sudo docker build -t content-api:latest .
       - run: sudo docker tag content-api:latest fabmedicala69.azurecr.io/content-api/content-api
       - run: sudo docker push fabmedicala69.azurecr.io/content-api/content-api
       - run: sudo docker run -d --name content-api -p 3000:3000 content-api
